SFUSA/force-app/main/default/objects/Account/fields/Accept_s_Tax_Paid__c.field-meta.xml
<CustomField>
        <fullName>Accept_s_Tax_Paid__c</fullName>
        <label>Accept's Tax Paid?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - Approval Required</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>