SFUSA/force-app/main/default/objects/Account/fields/Account_Owner_Active__c.field-meta.xml
<CustomField>
        <fullName>Account_Owner_Active__c</fullName>
        <description>This is used on the Integration to determine if the Account Owner is Active. When the Account Owner is Active, for related data such as Opportunities, set the Opportunity owner from the Account Owner. Else default to the logged in API user.</description>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the Account Owner an Active licensed user?</inlineHelpText>
        <label>Account Owner Active</label>
        <type>Checkbox</type>
    </CustomField>