SFUSA/force-app/main/default/objects/Account/fields/Account_Territory__c.field-meta.xml
<CustomField>
        <fullName>Account_Territory__c</fullName>
        <description>Territory defined by data in Anaplan; editable by COMs</description>
        <label>Account Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DOMESTIC AIRLINES</fullName>
                </value>
                <value>
                    <fullName>DOMESTIC MILITARY</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
                <value>
                    <fullName>MASSACHUSETTS</fullName>
                </value>
                <value>
                    <fullName>METRO NY</fullName>
                </value>
                <value>
                    <fullName>MICHIGAN</fullName>
                </value>
                <value>
                    <fullName>MINNESOTA</fullName>
                </value>
                <value>
                    <fullName>MISSISSIPPI</fullName>
                </value>
                <value>
                    <fullName>MISSOURI</fullName>
                </value>
                <value>
                    <fullName>MONTANA</fullName>
                </value>
                <value>
                    <fullName>MONTGOMERY COUNTY MD</fullName>
                </value>
                <value>
                    <fullName>NEBRASKA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>