SFUSA/force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ship to</fullName>
                </value>
                <value>
                    <fullName>Sold to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>