SFUSA/force-app/main/default/objects/Account/fields/AccountStyle__c.field-meta.xml
<CustomField>
        <fullName>AccountStyle__c</fullName>
        <label>Account Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Style</fullName>
                </value>
                <value>
                    <fullName>Traditional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>