SFUSA/force-app/main/default/objects/Account/fields/AccountTypeID__c.field-meta.xml
<CustomField>
        <fullName>AccountTypeID__c</fullName>
        <label>Account Type ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>