SFUSA/force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
        <fullName>Active__c</fullName>
        <description>Is the Account active? The output is Boolean. The calculation to true or false will be updated on this Formula. Initially set to all 'true'. Currently used for SplashThat Account exports.</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the Account active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>