SFUSA/force-app/main/default/objects/Account/fields/Bar_Code__c.field-meta.xml
<CustomField>
        <fullName>Bar_Code__c</fullName>
        <formula>IMAGE("//www.barcodesinc.com/generator/image.php?code="&amp;Id&amp;"&amp;style=325&amp;type=C128B&amp;width=200&amp;height=50&amp;xres=1&amp;font=3",Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bar Code</label>
        <type>Text</type>
    </CustomField>