SFUSA/force-app/main/default/objects/Account/fields/BG_Trade_Channel__c.field-meta.xml
<CustomField>
        <fullName>BG_Trade_Channel__c</fullName>
        <inlineHelpText>Post-2017 BG Trade Channel</inlineHelpText>
        <label>New BG Trade Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Casino/Gaming</fullName>
                </value>
                <value>
                    <fullName>Convenience/Drug</fullName>
                </value>
                <value>
                    <fullName>Events/Stadiums</fullName>
                </value>
                <value>
                    <fullName>Grocery/Mass</fullName>
                </value>
                <value>
                    <fullName>Large Format Liquor</fullName>
                </value>
                <value>
                    <fullName>Lodging/Resorts</fullName>
                </value>
                <value>
                    <fullName>Medium Format Liquor</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                </value>
                <value>
                    <fullName>Other Off-premise</fullName>
                </value>
                <value>
                    <fullName>Other On-premise</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Small Format Liquor</fullName>
                </value>
                <value>
                    <fullName>TO BE DETERMINED</fullName>
                </value>
                <value>
                    <fullName>Wholesale/Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>