SFUSA/force-app/main/default/objects/Account/fields/BinsCounterUnits__c.field-meta.xml
<CustomField>
        <fullName>BinsCounterUnits__c</fullName>
        <inlineHelpText>Are bins or counter units allowed?</inlineHelpText>
        <label>Bins / Counter Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bins</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Counter Units</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>