SFUSA/force-app/main/default/objects/Account/fields/Brand_Registration_State__c.field-meta.xml
<CustomField>
        <fullName>Brand_Registration_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand Registration State</label>
        <type>Checkbox</type>
    </CustomField>