SFUSA/force-app/main/default/objects/Account/fields/BrandCategory__c.field-meta.xml
<CustomField>
        <fullName>BrandCategory__c</fullName>
        <label>Brand Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BrandPartnerType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bourbon</fullName>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Tequila</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
                <value>
                    <fullName>World Whiskies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>