SFUSA/force-app/main/default/objects/Account/fields/Carrier_Broker_Contact_Information__c.field-meta.xml
<CustomField>
        <fullName>Carrier_Broker_Contact_Information__c</fullName>
        <label>Carrier Broker Contact Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>