SFUSA/force-app/main/default/objects/Account/fields/Case_Created_Notifications__c.field-meta.xml
<CustomField>
        <fullName>Case_Created_Notifications__c</fullName>
        <label>Case Created Notifications</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>