SFUSA/force-app/main/default/objects/Account/fields/Cluster__c.field-meta.xml
<CustomField>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>GTR HQ</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>