SFUSA/force-app/main/default/objects/Account/fields/Cognac_Tier__c.field-meta.xml
<CustomField>
        <fullName>Cognac_Tier__c</fullName>
        <label>Cognac Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>*TBD*</fullName>
                </value>
                <value>
                    <fullName>Main Warehouse</fullName>
                </value>
                <value>
                    <fullName>New / Multiple accounts</fullName>
                </value>
                <value>
                    <fullName>Regional Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>