SFUSA/force-app/main/default/objects/Account/fields/ConceptOwner__c.field-meta.xml
<CustomField>
        <fullName>ConceptOwner__c</fullName>
        <label>Concept Owner</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>