SFUSA/force-app/main/default/objects/Account/fields/Correspondence_CC_s__c.field-meta.xml
<CustomField>
        <fullName>Correspondence_CC_s__c</fullName>
        <label>Correspondence CC's</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>