SFUSA/force-app/main/default/objects/Account/fields/Customer_ID__c.field-meta.xml
<CustomField>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>