SFUSA/force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sales_Entity__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bottler</fullName>
                </value>
                <value>
                    <fullName>Brewery</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Cooperage</fullName>
                </value>
                <value>
                    <fullName>Crafter</fullName>
                </value>
                <value>
                    <fullName>Distiller</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Winery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>